[project]
name = "rcnn-finetuning"
version = "0.1.0"
description = "Fine-tuning R-CNN and segmentation models with PyTorch Lightning"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "opencv-python>=4.7.0",
    "albumentations>=1.3.0",
    "transformers>=4.30.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "wandb>=0.15.0",
    "tensorboard>=2.12.0",
    "tqdm>=4.64.0",
    "pycocotools>=2.0.6",
]